# kaizen-engine

./: .gitignore  CMakeLists.txt  README.md  kaizen.workspace  premake5.lua
Sandbox/source/: game.cc  game.h  keyboardinput.cc  keyboardinput.h  main.cc  settings.cc  settings.h  sprite.cc  types.h
Sandbox/source/core/: game.cc  game.h  types.h
Sandbox/source/graphics/: image.cc  image.h  renderer.cc  renderer.h  sprite.cc  sprite.h  texture.cc  texture.h
Sandbox/source/input/: keyboardinput.h
Sandbox/source/platform/: window.cc  window.h
sandbox/source/: main.cc
sandbox/source/core/: Defines.h  Game.cc  Game.h  Settings.cc  Settings.h
sandbox/source/graphics/: Image.cc  Image.h  Renderer.cc  Renderer.h  Sprite.cc  Sprite.h  Texture.cc  Texture.h
sandbox/source/input/: KeyboardInput.cc  KeyboardInput.h
sandbox/source/platform/: Window.cc  Window.h
source/kaizen/: game.cc  game.h  main.cc  types.h
